--- a/src/app/modules/design-system/components/info-icon/info-icon.component.html
+++ b/src/app/modules/design-system/components/info-icon/info-icon.component.html
@@ -1,6 +1,6 @@
 <svg-icon
   customTooltip
-  class="{{ colorClasses }} cursor-pointer"
+  class="cursor-pointer"
   [position]="tooltipPosition"
   [tooltipText]="stringTooltip"
   [tooltipTemplate]="templateTooltip"
