--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-item/category-item.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-item/category-item.component.html
@@ -1,5 +1,9 @@
 <ng-container *ngVar="category$ | async as category">
   <div class="flex items-center gap-x-2 flex-1 overflow-hidden">
+    <span
+      class="w-5 h-5 border-2 border-solid border-charcoal rounded-full"
+      [style.backgroundColor]="category.hexColor"
+    ></span>
     <svg-icon class="text-charcoal" [iconName]="category?.icon"></svg-icon>
     <span
       customTooltip
