--- a/src/styles.scss
+++ b/src/styles.scss
@@ -163,11 +163,21 @@ textarea {
   @apply text-charcoal #{!important};
 }
 
-.mat-mdc-form-field .mat-mdc-select.mat-mdc-select-invalid .mat-mdc-select-arrow {
-  @apply text-red #{!important};
+.mat-mdc-form-field {
+  .mat-mdc-select.mat-mdc-select-invalid .mat-mdc-select-arrow {
+    @apply text-red #{!important};
+  }
+}
+
+.mdc-floating-label {
+  @apply font-main #{!important};
 }
 
 // MAT ERRORS
+.mat-mdc-form-field-error {
+  @apply font-main #{!important};
+}
+
 .mat-mdc-form-field-error-wrapper {
   @apply p-0 #{!important};
 }
