--- a/src/app/modules/design-system/components/generic-activity-log-record/generic-activity-log-record.component.html
+++ b/src/app/modules/design-system/components/generic-activity-log-record/generic-activity-log-record.component.html
@@ -18,12 +18,6 @@
   [colorScheme]="'transparent-dark'"
   [buttonSizeY]="'tiny'"
   [buttonSizeX]="'tiny'"
-  [disabled]="loading"
+  [loading]="loading"
   (click)="removeButtonClick()"
 ></app-button>
-
-@if (loading) {
-  <div class="absolute top-0 left-0 w-full h-full flex justify-center items-center bg-hover-black z-50 rounded">
-    <app-loader [colorMode]="'dark'"></app-loader>
-  </div>
-}
