--- a/src/app/modules/design-system/components/menu/menu.component.html
+++ b/src/app/modules/design-system/components/menu/menu.component.html
@@ -7,6 +7,7 @@
   [buttonSizeX]="buttonSizeX"
   [text]="text"
   [disabled]="menuDisabled"
+  [loading]="loading"
 ></app-button>
 
 <mat-menu #menu="matMenu">
