jasmine lint plugin, linted project

--- a/src/app/modules/design-system/components/info-card/info-card.component.html
+++ b/src/app/modules/design-system/components/info-card/info-card.component.html
@@ -6,11 +6,7 @@
   ></app-menu>
 
   @if (tooltip) {
-    <app-info-icon
-      [size]="'medium'"
-      [tooltipPosition]="isMobile ? 'left' : 'top'"
-      [tooltip]="tooltip"
-    ></app-info-icon>
+    <app-info-icon [size]="'medium'" [tooltipPosition]="isMobile ? 'left' : 'top'" [tooltip]="tooltip"></app-info-icon>
   }
 </div>
 
