text for root values modals, button size, close modal btn

--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/categories/categories.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/categories/categories.component.html
@@ -15,6 +15,7 @@
         [colorScheme]="'charcoal'"
         [iconName]="'plus'"
         [buttonSizeY]="'small'"
+        [buttonSizeX]="'small'"
         (click)="addButtonAction()"
       ></app-button>
 
