--- a/src/app/modules/navigation-bar/components/navigation-bar-item/navigation-bar-item.component.html
+++ b/src/app/modules/navigation-bar/components/navigation-bar-item/navigation-bar-item.component.html
@@ -8,5 +8,6 @@
     [iconName]="item.iconName"
     [colorScheme]="routerLinkActive.isActive ? 'active-navigation-item' : 'transparent-light'"
     [buttonSizeY]="'small'"
+    [buttonSizeX]="'small'"
   ></app-button>
 </a>
