--- a/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.html
@@ -21,5 +21,6 @@
   [iconName]="'logout'"
   [colorScheme]="'transparent-light'"
   [buttonSizeY]="'small'"
+  [buttonSizeX]="'small'"
   (click)="logOut()"
 ></app-button>
