--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/add-category-modal/add-category-modal.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/add-category-modal/add-category-modal.component.html
@@ -1,6 +1,10 @@
-<h1 mat-dialog-title>{{ title | translate }}</h1>
+<div mat-dialog-title class="!flex !justify-between !items-center">
+  <h1>{{ title | translate }}</h1>
 
-<div mat-dialog-content class="flex flex-col">
+  <app-button [iconName]="'close'" (click)="cancelClick()"></app-button>
+</div>
+
+<div mat-dialog-content>
   <form class="flex flex-col" [formGroup]="form">
     <mat-form-field>
       <mat-label>{{ buildTranslationKey('categoryIconTitle') | translate }}</mat-label>
@@ -50,13 +54,6 @@
 </div>
 
 <div mat-dialog-actions>
-  <app-button
-    [buttonSizeX]="'auto'"
-    [colorScheme]="'transparent-dark'"
-    [text]="buildTranslationKey('cancel') | translate"
-    (click)="cancelClick()"
-  ></app-button>
-
   <app-button
     [colorScheme]="'charcoal'"
     [text]="buildTranslationKey('addCategory') | translate"
