--- a/src/app/modules/budget-tracker/modules/statistics/components/monthly-statistics/monthly-statistics.component.html
+++ b/src/app/modules/budget-tracker/modules/statistics/components/monthly-statistics/monthly-statistics.component.html
@@ -14,6 +14,7 @@
       [colorScheme]="'charcoal'"
       [iconName]="action.icon"
       [buttonSizeY]="'small'"
+      [buttonSizeX]="'small'"
       (click)="action.handler()"
     ></app-button>
   }
