--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
@@ -1,13 +1,8 @@
-<div mat-dialog-title class="!flex !justify-between !items-center">
-  <div>
-    <h1>{{ (category$ | async)?.name }}</h1>
-    <h2 class="text-sm">{{ buildTranslationKey('title') | translate }}</h2>
-  </div>
-
-  <app-button [iconName]="'close'" (click)="cancelClick()"></app-button>
-</div>
-
-<div mat-dialog-content>
+<app-base-modal
+  [titleTranslationKey]="(category$ | async)?.name"
+  [subtitleTranslationKey]="buildTranslationKey('subtitle')"
+  [footerTemplate]="footer"
+>
   <form class="flex flex-col" [formGroup]="form">
     <mat-form-field>
       <mat-label>{{ buildTranslationKey('valueToAddTitle') | translate }}</mat-label>
@@ -31,9 +26,9 @@
       }
     </mat-form-field>
   </form>
-</div>
+</app-base-modal>
 
-<div mat-dialog-actions>
+<ng-template #footer>
   <app-button
     [buttonSizeX]="'px100'"
     [colorScheme]="'charcoal'"
@@ -42,4 +37,4 @@
     [disabled]="!isFormValid"
     (click)="submitClick()"
   ></app-button>
-</div>
+</ng-template>
