button width improvement

--- a/src/app/modules/design-system/components/base-modal/base-modal.component.html
+++ b/src/app/modules/design-system/components/base-modal/base-modal.component.html
@@ -1,4 +1,4 @@
-<div mat-dialog-title class="!flex !justify-between !items-center">
+<div mat-dialog-title class="!flex !justify-between !items-center !gap-x-4">
   <div>
     <h1>{{ titleTranslationKey | translate }}</h1>
 
