--- a/src/app/modules/design-system/components/info-card/info-card.component.html
+++ b/src/app/modules/design-system/components/info-card/info-card.component.html
@@ -1,9 +1,7 @@
 <div class="absolute right-2 top-2 flex flex-col gap-1 items-center">
-  <app-menu
-    [colorScheme]="menuColorScheme"
-    [menuActions]="menuActions"
-    [menuDisabled]="shouldDisableMenu || !menuActions?.length"
-  ></app-menu>
+  @if (menuActions?.length) {
+    <app-menu [colorScheme]="menuColorScheme" [menuActions]="menuActions" [menuDisabled]="shouldDisableMenu"></app-menu>
+  }
 
   @if (tooltip) {
     <app-info-icon [size]="'medium'" [tooltipPosition]="isMobile ? 'left' : 'top'" [tooltip]="tooltip"></app-info-icon>
