--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/add-category-modal/add-category-modal.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/add-category-modal/add-category-modal.component.html
@@ -45,10 +45,15 @@
       }
     </mat-form-field>
 
-    <div class="flex items-center gap-x-4 mt-4">
-      <span class="font-main text-base text-charcoal">{{ buildTranslationKey('categoryColorTitle') | translate }}</span>
-      <ngx-colors ngx-colors-trigger [formControlName]="formFields.CategoryColor" [hideTextInput]="true"></ngx-colors>
-    </div>
+    <mat-form-field>
+      <mat-label>Color</mat-label>
+      <input matInput [formControlName]="formFields.CategoryColorInput" />
+      <ngx-colors matSuffix ngx-colors-trigger [formControlName]="formFields.CategoryColorPicker"></ngx-colors>
+
+      @if (this.form.controls[formFields.CategoryColorInput].hasError('invalidColor')) {
+        <mat-error> {{ 'formErrors.invalidColor' | translate }} </mat-error>
+      }
+    </mat-form-field>
   </form>
 </app-base-modal>
 
