added accounts card, removed unused card

--- a/src/app/modules/budget-tracker/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/dashboard.component.html
@@ -9,8 +9,7 @@
   <app-income-info-card class="card"></app-income-info-card>
   <app-expense-info-card class="card"></app-expense-info-card>
   <app-balance-info-card class="card"></app-balance-info-card>
-  <app-savings-info-card class="card"></app-savings-info-card>
-  <app-free-money-info-card class="card"></app-free-money-info-card>
+  <app-accounts-info-card class="card"></app-accounts-info-card>
 </div>
 
 <div class="main-cards">
