--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/balance-info-card/balance-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/balance-info-card/balance-info-card.component.html
@@ -1,12 +1,8 @@
 <app-info-card
   [iconBGClass]="'bg-light-blue'"
   [iconName]="'equal-sign'"
-  [twoLine]="true"
-  [primaryText]="currentBalance$ | async | currencySymbol"
-  [secondaryText]="buildTranslationKey('currentBalance') | translate"
-  [additionalPrimaryText]="fullBalance$ | async | currencySymbol"
-  [additionalSecondaryText]="buildTranslationKey('fullBalance') | translate"
-  [menuActions]="menuActions"
+  [primaryText]="fullBalance$ | async | currencySymbol"
+  [secondaryText]="buildTranslationKey('fullBalance') | translate"
   [tooltip]="tooltip"
 ></app-info-card>
 
