--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/balance-info-card/balance-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/balance-info-card/balance-info-card.component.html
@@ -1,5 +1,5 @@
 <app-info-card
-  [iconBGClass]="'bg-light-blue'"
+  [iconBgClass]="'bg-light-blue'"
   [iconName]="'equal-sign'"
   [primaryText]="fullBalance$ | async | currencySymbol"
   [secondaryText]="buildTranslationKey('fullBalance') | translate"
