--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/expense-info-card/expense-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/expense-info-card/expense-info-card.component.html
@@ -1,5 +1,5 @@
 <app-info-card
-  [iconBGClass]="'bg-light-red'"
+  [iconBgClass]="'bg-light-red'"
   [iconColorClass]="'text-red'"
   [iconName]="'arrow-down'"
   [primaryText]="expense$ | async | currencySymbol"
