--- a/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/activity-log/activity-log.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/activity-log/components/activity-log/activity-log.component.html
@@ -64,8 +64,8 @@
 
 <ng-template #recordItem let-item="item">
   @switch (item.recordType) {
-    @case (recordType.RootValueChange) {
-      <app-root-value-change-record class="w-full" [record]="item"></app-root-value-change-record>
+    @case (recordType.AccountValueEdit) {
+      <app-account-value-edit-record class="w-full" [record]="item"></app-account-value-edit-record>
     }
     @case (recordType.CategoryManagement) {
       <app-category-management-record class="w-full" [record]="item"></app-category-management-record>
