--- a/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/categories/components/category-value-modal/category-value-modal.component.html
@@ -1,4 +1,5 @@
 <app-base-modal
+  *ngVar="accounts$ | async as accounts"
   [titleTranslationKey]="(category$ | async)?.name"
   [subtitleTranslationKey]="buildTranslationKey('subtitle')"
   [footerTemplate]="footer"
@@ -29,6 +30,16 @@
         <mat-error>{{ 'formErrors.noteTooLong' | translate }}</mat-error>
       }
     </mat-form-field>
+
+    <mat-radio-group class="mt-4" [formControlName]="formFieldsEnum.AccountToUse">
+      <div class="flex flex-col px-4 font-main text-charcoal text-base">
+        <mat-label>{{ buildTranslationKey('accountsTitle') | translate }}</mat-label>
+
+        @for (account of accounts; track account.id) {
+          <mat-radio-button [disableRipple]="true" [value]="account.id">{{ account.name }}</mat-radio-button>
+        }
+      </div>
+    </mat-radio-group>
   </form>
 </app-base-modal>
 
