--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/accounts-info-card/accounts-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/accounts-info-card/accounts-info-card.component.html
@@ -1,9 +1,16 @@
-<div class="wrapper cursor-pointer relative rounded-lg overflow-hidden">
+<div
+  *ngVar="accountsAmount$ | async as accountsAmount"
+  class="wrapper relative rounded-lg overflow-hidden"
+  [ngClass]="{
+    'cursor-pointer': accountsAmount,
+    'cursor-default pointer-events-none': !accountsAmount
+  }"
+>
   <app-info-card
     [iconName]="'creditcard-folder'"
     [iconColorClass]="'text-dark-green'"
     [colorScheme]="'green'"
-    [primaryText]="buildTranslationKey('title') | translate"
+    [primaryText]="buildTranslationKey('title') | translate: { accountsAmount }"
   >
   </app-info-card>
 
