--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/income-info-card/income-info-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/info-cards/income-info-card/income-info-card.component.html
@@ -1,5 +1,5 @@
 <app-info-card
-  [iconBGClass]="'bg-light-green'"
+  [iconBgClass]="'bg-light-green'"
   [iconColorClass]="'text-dark-green'"
   [iconName]="'arrow-up'"
   [primaryText]="income$ | async | currencySymbol"
