--- a/src/app/modules/design-system/components/button/button.component.scss
+++ b/src/app/modules/design-system/components/button/button.component.scss
@@ -183,4 +183,12 @@
       @apply text-white;
     }
   }
+
+  &.active-transparent-dark {
+    @apply bg-hover-black text-charcoal;
+
+    svg-icon {
+      @apply text-charcoal;
+    }
+  }
 }
