--- a/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/account-card/account-card.component.html
+++ b/src/app/modules/budget-tracker/modules/dashboard/modules/info-cards/components/account-card/account-card.component.html
@@ -2,7 +2,7 @@
   <app-info-card
     class="flex-1"
     [iconName]="account.icon"
-    [primaryText]="account.value"
+    [primaryText]="primaryText"
     [secondaryText]="account.name"
     [shouldUseCssStyles]="true"
     [hexBgColor]="account.bgColor"
