--- a/src/app/modules/budget-tracker/budget-tracker.component.html
+++ b/src/app/modules/budget-tracker/budget-tracker.component.html
@@ -1,14 +1,18 @@
 <app-navigation-bar></app-navigation-bar>
 
-@if (isLoading$ | async) {
-  <div class="absolute top-0 left-0 w-full h-full flex justify-center items-center bg-dirty-white z-50">
-    <app-loader [colorMode]="'dark'" [size]="'main-loader'"></app-loader>
-  </div>
-}
+<ng-container *ngVar="isLoading$ | async as isLoading">
+  @if (isLoading) {
+    <div class="absolute top-0 left-0 w-full h-full flex justify-center items-center bg-dirty-white z-50">
+      <app-loader [colorMode]="'dark'" [size]="'main-loader'"></app-loader>
+    </div>
+  }
 
-<div class="animated-route main p-6 w-full bg-dirty-white">
-  <router-outlet></router-outlet>
-</div>
+  @if (isLoading === false) {
+    <div class="animated-route main p-6 w-full bg-dirty-white">
+      <router-outlet></router-outlet>
+    </div>
+  }
+</ng-container>
 
 @if ((isOnline$ | async) === false) {
   <app-lost-connection-message></app-lost-connection-message>
